kubernetes/apps/selfhosted/open-webui/pipelines/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: open-webui-pipelines
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: open-webui-pipelines
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui
      toPorts:
        - ports:
            - port: "9099"
              protocol: TCP
